--- a/TrabajosIndividuales/MarcosOrtiz/package.json
+++ b/TrabajosIndividuales/MarcosOrtiz/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^5.3.4",
     "formik": "^2.4.6",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "yup": "^1.6.1"
   },
